force-app/main/default/objects/Vehicle/Vehicle.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>