force-app/main/default/objects/Vehicle/fields/AF_AdoptedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_AdoptedDate__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: adoptedDate.</description>
    <label>Adopted Date</label>
    <type>Date</type>
</CustomField>