force-app/main/default/objects/Vehicle/fields/AF_AvailabilityForSale__c.field-meta.xml
<CustomField>
    <fullName>AF_AvailabilityForSale__c</fullName>
    <label>Availability for Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available for Sale</fullName>
                <default>true</default>
                <label>Available for Sale</label>
            </value>
            <value>
                <fullName>Not available for sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>