force-app/main/default/objects/Vehicle/fields/AF_BrandSubStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_BrandSubStatus__c</fullName>
    <label>Brand Sub-status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>