force-app/main/default/objects/Vehicle/fields/AF_Colour__c.field-meta.xml
<CustomField>
    <fullName>AF_Colour__c</fullName>
    <label>Colour</label>
    <length>100</length>
    <type>Text</type>
</CustomField>