force-app/main/default/objects/Vehicle/fields/AF_CommissionNumber__c.field-meta.xml
<CustomField>
    <fullName>AF_CommissionNumber__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: commissionNumber.</description>
    <label>Commission Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>