force-app/main/default/objects/Vehicle/fields/AF_CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>AF_CurrencyCode__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: currencyCode, shared money-cluster field for inventory pricing.</description>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>