force-app/main/default/objects/Vehicle/fields/AF_CurrentOwnerContact__c.field-meta.xml
<CustomField>
    <fullName>AF_CurrentOwnerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Owner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles (Current Owner)</relationshipLabel>
    <relationshipName>AF_CurrentOwnerVehicles</relationshipName>
    <type>Lookup</type>
</CustomField>