force-app/main/default/objects/Vehicle/fields/AF_CustomerOwned__c.field-meta.xml
<CustomField>
    <fullName>AF_CustomerOwned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Owned?</label>
    <type>Checkbox</type>
</CustomField>