force-app/main/default/objects/Vehicle/fields/AF_CustomNewVehicle__c.field-meta.xml
<CustomField>
    <fullName>AF_CustomNewVehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scenario-2 flag; placeholder cleared when VIN arrives.</description>
    <label>Custom/New Vehicle?</label>
    <type>Checkbox</type>
</CustomField>