force-app/main/default/objects/Vehicle/fields/AF_EstimatedReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>AF_EstimatedReceivedDate__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: estimatedReceivedDate.</description>
    <label>Estimated Received Date</label>
    <type>Date</type>
</CustomField>