force-app/main/default/objects/Vehicle/fields/AF_GrossValue__c.field-meta.xml
<CustomField>
    <fullName>AF_GrossValue__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: grossValue.</description>
    <label>Gross Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>