force-app/main/default/objects/Vehicle/fields/AF_InventoryStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_InventoryStatus__c</fullName>
    <description>Keyloop-mastered mirror.</description>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>