force-app/main/default/objects/Vehicle/fields/AF_InventoryVehicle__c.field-meta.xml
<CustomField>
    <fullName>AF_InventoryVehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Vehicle?</label>
    <type>Checkbox</type>
</CustomField>