force-app/main/default/objects/Vehicle/fields/AF_Location__c.field-meta.xml
<CustomField>
    <fullName>AF_Location__c</fullName>
    <description>Feed-scope question (D3) — may move to a Location/ProductItem lookup once Keyloop feed shape is confirmed.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>