force-app/main/default/objects/Vehicle/fields/AF_MakeCode__c.field-meta.xml
<CustomField>
    <fullName>AF_MakeCode__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: makeCode — distinct from Vehicle.MakeName (name vs code).</description>
    <label>Make Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>