force-app/main/default/objects/Vehicle/fields/AF_MediaAvailability__c.field-meta.xml
<CustomField>
    <fullName>AF_MediaAvailability__c</fullName>
    <label>Media Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>