force-app/main/default/objects/Vehicle/fields/AF_NoVINPlaceholder__c.field-meta.xml
<CustomField>
    <fullName>AF_NoVINPlaceholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scenario-2 flag; cleared when VIN arrives.</description>
    <label>No-VIN Placeholder?</label>
    <type>Checkbox</type>
</CustomField>