force-app/main/default/objects/Vehicle/fields/AF_OnlinePublication__c.field-meta.xml
<CustomField>
    <fullName>AF_OnlinePublication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: onlinePublication — whether this vehicle is published to online inventory listings.</description>
    <label>Online Publication</label>
    <type>Checkbox</type>
</CustomField>