force-app/main/default/objects/Vehicle/fields/AF_OrderDate__c.field-meta.xml
<CustomField>
    <fullName>AF_OrderDate__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: orderDate (inventory order date, distinct from Opportunity order date).</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>