force-app/main/default/objects/Vehicle/fields/AF_PDIAccessoryCost__c.field-meta.xml
<CustomField>
    <fullName>AF_PDIAccessoryCost__c</fullName>
    <description>LFRDN-346: internal cost of PDI/accessory fitting jobs actioned against this vehicle via the Internal Requisition Form. Stub landing field only - no automation writes to it yet, since the Autoline/Keyloop integration mechanism for job costing is deferred to solution design per the ticket&apos;s own assumptions.</description>
    <label>PDI / Accessory Job Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>