force-app/main/default/objects/Vehicle/fields/AF_ReservationStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_ReservationStatus__c</fullName>
    <description>History lives on the Vehicle Reservation object; this is the current-state mirror.</description>
    <label>Reservation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Hold Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>