force-app/main/default/objects/Vehicle/fields/AF_SalesDeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_SalesDeliveryStatus__c</fullName>
    <description>Keyloop mirror ONLY — Opportunity SO Status is the process source for Delivered, never this field.</description>
    <label>Sales / Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>