force-app/main/default/objects/Vehicle/fields/AF_TaxRate__c.field-meta.xml
<CustomField>
    <fullName>AF_TaxRate__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: taxRate.</description>
    <label>Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>