force-app/main/default/objects/Vehicle/fields/AF_ThumbnailLink__c.field-meta.xml
<CustomField>
    <fullName>AF_ThumbnailLink__c</fullName>
    <description>Auto-populated by AF_VehicleImagesHandler from the first Photo uploaded to this Vehicle&apos;s Files related list. Used by the Vehicle Finder card/detail image.</description>
    <label>Thumbnail Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>