force-app/main/default/objects/Vehicle/fields/AF_VariantCode__c.field-meta.xml
<CustomField>
    <fullName>AF_VariantCode__c</fullName>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: variantCode — distinct from Vehicle.TrimLevel (name vs code).</description>
    <label>Variant Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>