force-app/main/default/objects/Vehicle/fields/AF_VATQualifying__c.field-meta.xml
<CustomField>
    <fullName>AF_VATQualifying__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keyloop af-keyloop-sapi mapping (2026-09-16). No SF field existed for this Keyloop inventory attribute. Keyloop field: isVatQualifyingVehicle.</description>
    <label>VAT Qualifying</label>
    <type>Checkbox</type>
</CustomField>