force-app/main/default/objects/Vehicle/fields/AF_VehicleOrderState__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleOrderState__c</fullName>
    <label>Vehicle Order State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Order</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>In Stock-Arrived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>