force-app/main/default/objects/Vehicle/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(VehicleDefinition.Product.Image_URL__c, &quot;Image&quot;, 50, 50 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>