force-app/main/default/objects/Vehicle/recordTypes/Demo_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Demo_Vehicle</fullName>
    <active>true</active>
    <description>Vehicles used for test drives, not held in the sellable stock pool.</description>
    <label>Demo Vehicle</label>
</RecordType>