force-app/main/default/objects/Vehicle/recordTypes/Regular_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Regular_Vehicle</fullName>
    <active>true</active>
    <description>Standard sellable-stock vehicles — everything that is not a Demo Vehicle.</description>
    <label>Regular Vehicle</label>
</RecordType>