force-app/main/default/objects/Vehicle/listViews/All_Vehicles.listView-meta.xml
<ListView>
    <fullName>All_Vehicles</fullName>
    <columns>Name</columns>
    <columns>VehicleIdentificationNumber</columns>
    <columns>ChassisNumber</columns>
    <columns>Asset</columns>
    <columns>CurrentOwner</columns>
    <columns>Status</columns>
    <columns>LastOdometerReading</columns>
    <columns>OdometerReadingUom</columns>
    <filterScope>Everything</filterScope>
    <label>All Vehicles</label>
</ListView>