force-app/main/default/objects/Vehicle/listViews/Demo_Vehicles.listView-meta.xml
<ListView>
    <fullName>Demo_Vehicles</fullName>
    <columns>Name</columns>
    <columns>CurrentOwner</columns>
    <columns>Status</columns>
    <columns>VehicleIdentificationNumber</columns>
    <columns>ChassisNumber</columns>
    <columns>LastOdometerReading</columns>
    <columns>OdometerReadingUom</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>Vehicle.Demo_Vehicle</value>
    </filters>
    <label>Demo Vehicles</label>
</ListView>