force-app/main/default/objects/Vehicle/listViews/In_Transit_Vehicles.listView-meta.xml
<ListView>
    <fullName>In_Transit_Vehicles</fullName>
    <columns>Name</columns>
    <columns>CurrentOwner</columns>
    <columns>Status</columns>
    <columns>VehicleIdentificationNumber</columns>
    <columns>ChassisNumber</columns>
    <columns>LastOdometerReading</columns>
    <columns>OdometerReadingUom</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AF_InventoryStatus__c</field>
        <operation>equals</operation>
        <value>In Transit</value>
    </filters>
    <label>In-Transit Vehicles</label>
</ListView>