force-app/main/default/objects/Vehicle/listViews/Ordered_Vehicles.listView-meta.xml
<ListView>
    <fullName>Ordered_Vehicles</fullName>
    <columns>Name</columns>
    <columns>CurrentOwner</columns>
    <columns>Status</columns>
    <columns>VehicleIdentificationNumber</columns>
    <columns>ChassisNumber</columns>
    <columns>LastOdometerReading</columns>
    <columns>OdometerReadingUom</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AF_InventoryStatus__c</field>
        <operation>equals</operation>
        <value>Ordered</value>
    </filters>
    <label>Ordered Vehicles</label>
</ListView>